0.6
===

Game
----

* Added loading step before start game.
* Merged render and update loop. Using request animation frame method.
* Trigger event for collision group for both bodies. Ex: collision_bullets_asteroids.
* Trigger event for after update function.
* Added support for adding Scenes as objects.
* Delegate render and update to active scene.
* Removed assets_loaded event.
* Initialize scenes after loading assets.
* Map rendering removed for maintenance.
* Calling enter and exit scenes methods when switching.

Scene
-----

* Added Scene basic class.

RenderAssistant
---------------

* Added drawLine method.

Sprite
------

* Passing texture directly to the constructor function.
* Fixed a few bugs when sprite didn't have animation.
* Added rotation parameter for rendering rotated sprites.

InputAssistant
--------------

* When key is pressed it will fire events since keyup. It fixes a weird bug when keydown event is not fired.

GUI
---

* Button: Using HTML elements instead of canvas polygons.