@@ -97,6 +97,14 @@ define(function (require) {
     };
 
     /**
+     * TODO:
+     * @method addLabel
+     */
+    Game.prototype.addLabel = function (name, sceneId, labelDesc) {
+        this.gui.addElement(sceneId, new GUI.Label(name, labelDesc).elem);
+    };
+
+    /**
      * Execute a update-render cycle
      *
      * @method loop
