@@ -72,26 +72,48 @@ define(function (require) {
     };
 
     /**
-     * Constructor function for GUI text labels.
-     * It expects a x and y coordinates and text to display.
-     * Inherits from soul for take advantage of Event Emitter
-     * and position.
-     *
-     * @method GUI.Label
+     * TODO:
      */
-    GUI.Label = function (name, x, y, message, options) {
-        Soul.call(this, name, x, y);
-        this.message = message;
-        this.options = options;
-    };
+    GUI.Label = function (name, labelDesc) {
+        var image = resourceAssistant.getImage(name),
+            cssRules = labelDesc.font.split(";"),
+            i,
+            l,
+            prop,
+            value;
 
-    inherit(GUI.Label, Soul);
+        this.elem = document.createElement('span');
+
+        this.elem.style.position = "absolute";
+        this.elem.style.left = labelDesc.x + "px";
+        this.elem.style.top = labelDesc.y + "px";
+
+        for (i = 0, l = cssRules.length; i < l; i += 1) {
+            prop = cssRules[i].split(":")[0];
+            value = cssRules[i].split(":")[1];
+
+            if (prop !== "") {
+                this.elem.style[prop] = value;
+            }
+        }
+
+        if (labelDesc.text !== undefined) {
+            this.elem.innerHTML = labelDesc.text;
+        }
+        if (labelDesc.image !== undefined) {
+            this.elem.style.background = "url(" + image.src + ") no-repeat";
+            this.elem.style.width = image.width + "px";
+            this.elem.style.height = image.height + "px";
+        } else {
+            this.elem.style.width = labelDesc.width + "px";
+            this.elem.style.height = labelDesc.height + "px";
+        }
+
+        this.on(labelDesc.action, proxy(this, function (text) {
+            this.elem.innerHTML = text;
+        }));
+    };
     extend(eventEmitter, GUI.Label.prototype);
-
-    GUI.Label.prototype.render = function () {
-        var position = this.getPosition();
-        renderAssistant.drawText(position.x, position.y, this.message, this.options);
-    };
 
     /**
      * TODO:
